tools/flowc/tests/errors/error18.flow
import string;

// Test on detection of name conflict in a nested lambda arguments

fun1() -> int {
	(\x -> (\x -> x + 1)(x))(0)
}
